<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/que_alimentos_no_te_gusta"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/grey_90"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp">

        <EditText
            android:id="@+id/et_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_3"
            android:gravity="top"
            android:hint="@string/escribe_aqui"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancelar"
            style="@style/Button.Accent.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancelar"
            android:textAllCaps="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_guardar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/guardar"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>